Eliminate getBundlesStateMap()
This method is not called anywhere, eliminate it.

Change-Id: I0ec7d0b601347a87fcf72b1870f13c0df94dbdee
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>